# defiet

./: Cargo.toml  DESIGN.md  README.md  asset_map.yml  assets.yml  dai.yml  example-input.yml  fusion.yml  inno_targets.json  input.example.yml  input.yml  main.py  sushi.yml  targets.json
bots/: Bot.md
configs/: 88mph.yml  Aave.yml  BProtocol.yml  BetaFinance.yml  BiFI.yml  Compund.yml  Euler.yml  LendFlare.yml  Morpho.yml  Notional.yml  Paladin.yml  SiloFinance.yml  Sturdy.yml  WingFinance.yml  YieldProtocol.yml  dForce.yml
dex_configs/: uniswap.yaml
fusion_configs/: Aave.yml  BProtocol.yml  BiFi.yml  Compound.yml  Euler.yml  LendFlare.yml  Morpho.yml  Notion.yml  Paladin.yml  SiloFinance.yml  Sturdy.yml  WingFinance.yml  Wing_Finance.yml  Yield_Protocol.yml  aave-v1.yml  b_protocol.yml  beta_finance.yml  dForce.yml
fusion_configs_disabled/: 88mph.yml  BetaFinance.yml  BiFi.yml  LendFlare.yml  SiloFinance.yml  YieldProtocol.yml
lending_configs/: Aave.yml  BProtocol.yml  BetaFinance.yml  BiFI.yml  Compund.yml  Paladin.yml  SiloFinance.yml  Sturdy.yml  YieldProtocol.yml
nft_configs/: opensea.yml
protocols/: RESEARCH.md  index.md  target.py  targets.json
protocols/lending/: 88mph.md  aave.md  compound.md
src/: config_parser.rs  csv_output.rs  event_parser.rs  log_parser.rs  main.rs
tools/: combine.py  csv2mongo.py  fusion.py
