[package]
name = "defiet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
ethers = { features = ["legacy", "ws", "rustls"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rocksdb = "0.19.0"
serde = "1.0.150"
serde_json = "1.0.89"
serde_yaml = "0.9"
tokio = { version = "1.23.0", features = ["macros"] }
